--- a/SzerszamCimkezo/SzerszamCimkezo.vbproj
+++ b/SzerszamCimkezo/SzerszamCimkezo.vbproj
@@ -132,6 +132,7 @@
     <Content Include="Szerszamok.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ToDo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
